# aoc-2024-on-esp32

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
src/: consts.rs  error.rs  helpers.rs  main.rs  pages.rs  problems.rs  server.rs
src/pages/: index.rs  input.rs  solver.rs
src/problems/: p01.rs  p02.rs  p03.rs
