[package]
name = "aoc-esp32-rs"
version = "0.1.0"
edition = "2021"
authors = ["github/c-to-the-l"]

[dependencies]
esp-hal = { version = "0.22.0", features = [
    "esp32c3",
    "defmt",
] }

esp-backtrace = { version = "0.14.1", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "defmt",
]}

esp-alloc = { version = "0.5.0" }
esp-println = { version = "0.11.0", features = ["esp32c3", "defmt-espflash"] }
embedded-io = "0.6.1"

embedded-io-async = "0.6.1"
embassy-net = { version = "0.4.0", features = [ "defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }

esp-wifi = { version = "0.11.0", default-features=false, features = [
    "esp32c3",
    "utils",
    "wifi",
    "esp-alloc",
    "defmt",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
defmt            = "0.3.8"
# defmt-rtt        = "0.4.1"
embassy-executor = { version = "0.6.0",  features = [
    "task-arena-size-20480",
    "defmt"
] }
embassy-time     = { version = "0.3.1",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.5.0",  features = ["esp32c3"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }
reqwless = "0.13.0"
thiserror = { version = "2.0.3", default-features = false }
picoserve = { version = "0.12.2", features = ["embassy", "defmt"] }
portable-atomic = "1.10.0"
serde = { version = "1.0.215", default-features = false, features = ["derive", "alloc"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.release.package.esp-wifi]
opt-level = 3

[lints.clippy]
correctness = "deny"
suspicious = "deny"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
